Closed Bug 1732256 Opened 3 years ago Closed 3 years ago

Crash in [@ mozilla::net::nsHttpConnection::OnReadSegment]

Categories

(Core :: Networking: HTTP, defect)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 + fixed

People

(Reporter: aryx, Assigned: dragana)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Maybe Fission related. (DOMFissionEnabled=1)

Crash report: https://crash-stats.mozilla.org/report/index/3cf56bd9-9faf-4408-b48f-cae580210923

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(!mTlsHandshakeComplitionPending)

Top 10 frames of crashing thread:

0 xul.dll mozilla::net::nsHttpConnection::OnReadSegment netwerk/protocol/http/nsHttpConnection.cpp:1725
1 xul.dll mozilla::net::Http2Session::FlushOutputQueue netwerk/protocol/http/Http2Session.cpp:683
2 xul.dll mozilla::net::Http2Session::GenerateRstStream netwerk/protocol/http/Http2Session.cpp:942
3 xul.dll mozilla::net::Http2Session::CleanupStream netwerk/protocol/http/Http2Session.cpp:1227
4 xul.dll mozilla::net::Http2Session::CloseTransaction netwerk/protocol/http/Http2Session.cpp:3796
5 xul.dll mozilla::net::nsHttpConnectionMgr::OnMsgCancelTransaction netwerk/protocol/http/nsHttpConnectionMgr.cpp:2064
6 xul.dll mozilla::net::ConnEvent::Run netwerk/protocol/http/nsHttpConnectionMgr.cpp:175
7 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1142
8 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:466
9 xul.dll mozilla::net::nsSocketTransportService::Run netwerk/base/nsSocketTransportService2.cpp:1190
Flags: needinfo?(dd.mozilla)
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Pushed by ddamjanovic@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c76c679849d7
When TLS handshake completion is pending it may happen that nss and necko are out of sync. r=necko-reviewers,kershaw,valentin
Flags: needinfo?(dd.mozilla)
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: