Bug 1732256 - When TLS handshake completion is pending it may happen that nss and necko are out of sync. r=necko-reviewers,kershaw,valentin

The previous check was incorrect.

Differential Revision: https://phabricator.services.mozilla.com/D126496